# iris

./: .gitignore  CMakeLists.txt  LICENSE
include/iris/: application.hpp  camera.hpp  mesh.hpp  scene.hpp  shader.hpp  texture.hpp  tile.hpp  tilemap.hpp  utils.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
source/: application.cpp  mesh.cpp  scene.cpp  shader.cpp  texture.cpp  tilemap.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
